[gd_scene load_steps=12 format=3 uid="uid://dubbfojqsls1u"]

[ext_resource type="Texture2D" uid="uid://lqayh58ocnat" path="res://NomNom/Assets/buildings/bar.png" id="1_71qbx"]
[ext_resource type="Script" path="res://NomNom/Scripts/building.gd" id="1_roudv"]
[ext_resource type="Texture2D" uid="uid://dey6ldsuf726o" path="res://NomNom/Assets/buildings/factory.webp" id="2_ntkrg"]
[ext_resource type="Texture2D" uid="uid://tg7p177qsd53" path="res://NomNom/Assets/buildings/brothel.webp" id="3_lnhk0"]
[ext_resource type="Texture2D" uid="uid://bpe08h1d2horu" path="res://NomNom/Assets/buildings/crane.webp" id="5_wk6qo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pdmc"]
size = Vector2(292, 174)

[sub_resource type="Animation" id="Animation_dtso7"]
resource_name = "Popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-48, -304), Vector2(-48, -340)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_msjti"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-55, -263.095)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8y5nn"]
_data = {
"Popup": SubResource("Animation_dtso7"),
"RESET": SubResource("Animation_msjti")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hy84a"]
size = Vector2(280, 216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3s7u"]
size = Vector2(314, 234)

[node name="Building" type="Area2D"]
script = ExtResource("1_roudv")

[node name="Bar" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_0pdmc")

[node name="Sprite2D" type="Sprite2D" parent="Bar"]
scale = Vector2(0.6, 0.592941)
texture = ExtResource("1_71qbx")

[node name="Label" type="Label" parent="Bar/Sprite2D"]
visible = false
offset_left = -55.0
offset_top = -263.095
offset_right = 34.0
offset_bottom = -240.095
scale = Vector2(2, 2)
text = "+ 10 Energy"

[node name="AddEnergy" type="AnimationPlayer" parent="Bar/Sprite2D/Label"]
libraries = {
"": SubResource("AnimationLibrary_8y5nn")
}

[node name="Factory" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_hy84a")

[node name="Sprite2D" type="Sprite2D" parent="Factory"]
position = Vector2(-1.00001, 0.8125)
scale = Vector2(0.209375, 0.251984)
texture = ExtResource("2_ntkrg")

[node name="Label" type="Label" parent="Factory/Sprite2D"]
visible = false
offset_left = -55.0
offset_top = -263.095
offset_right = 72.0
offset_bottom = -240.095
scale = Vector2(4, 4)
text = "+ 10 Food"

[node name="AddFood" type="AnimationPlayer" parent="Factory/Sprite2D/Label"]
libraries = {
"": SubResource("AnimationLibrary_8y5nn")
}

[node name="Brothel" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_v3s7u")

[node name="Sprite2D" type="Sprite2D" parent="Brothel"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_lnhk0")

[node name="Label" type="Label" parent="Brothel/Sprite2D"]
visible = false
offset_left = -55.0
offset_top = -263.095
offset_right = -1.0
offset_bottom = -240.095
scale = Vector2(2, 2)
text = "+ 1 Ant"

[node name="AddAnt" type="AnimationPlayer" parent="Brothel/Sprite2D/Label"]
libraries = {
"": SubResource("AnimationLibrary_8y5nn")
}

[node name="Label" type="Label" parent="."]
offset_left = -70.0
offset_top = -147.0
offset_right = 71.0
offset_bottom = -118.0
horizontal_alignment = 1

[node name="BuildSite" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v3s7u")

[node name="Sprite2D" type="Sprite2D" parent="BuildSite"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_wk6qo")

[node name="Label" type="Label" parent="BuildSite/Sprite2D"]
visible = false
offset_left = -55.0
offset_top = -263.095
offset_right = -9.0
offset_bottom = -240.095
scale = Vector2(2, 2)
text = "+ ANT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="BuildSite/Sprite2D/Label"]
libraries = {
"": SubResource("AnimationLibrary_8y5nn")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
